# EnchantedNatures.Api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  EnchantedNaturesApiSpec.yaml  README.md  Shuttle.toml  docker-compose.yaml  enchanted-natures.openapi.spec.yaml  enchanted-natures.openapi.yaml  outfile.json  schemas.sql
.github/workflows/: docker-publish-arc.yml  docker-publish.yml  docker_build_and_publish.yaml
.sqlx/: query-04e26f330fac54e5759ebff90358dbcc66d212783db1eca9962c8268ecc59d5d.json  query-0a71cf3a87eab8ddccd0d0157d78625864a4cb28225d39dde2a5f2d996eb4007.json  query-0ba2e9930e42b7ffbddaea8ab0a1a14814ccb54a2f4a1b3811f22a8323b4a270.json  query-102fca9aba6433b261a4633b19260efe02fab04259ee4a29c02989dc1154a210.json  query-13987a6469c11f20d65cc4475c5664d1c1f8049c4071ec5655440df46ab0929c.json  query-139a38a28e26689c225f8b6fb753d353f222461e630b0cfed322bb49c5c67a3c.json  query-173a3a1eac049fcca97d0b67c2f8d55c86b2a2ff9a2b43e7453ad051d4ea3bc1.json  query-1e9ac28187931715b329a6c57f5dc8ab83a3044337390a9b8bd82142a6e9d536.json  query-202cbb58a5feb29f39a8140f9358c656fcc306e841e9cabf3c30e34327cc20bc.json  query-282bbaafe8b0c9bc6ad1ca461b83b12ade31adbb048ee3d42b9ba2277ae0ac8e.json  query-2d3dd2e63619b92130a4030b799b0f33639a27e49c203ed4c42e9fe89325ddb8.json  query-305172cae87026c8908ba670af737abce2e845e06e9a7200179729b527dc0cfb.json  query-39dd8a98c6335004778aaa5f7d10fc23b94fc86e8e5b2dbd2b27411fe9811eec.json  query-44da60235fc66076e670498ad1b003275d142cd298b2ce6792e2df072d3d4ae0.json  query-48d60fc62c30eea70136b4b9d4d0afc7893cb5489485b541b196cc0fabf60834.json  query-55d19b220c541b7d7dbf14e4c322333f2842046d5400fea19b782bf42c8a168b.json  query-63245904695b98b8b3e7da308a05d8174c0cf2a7015ccfe62101190a658056ed.json  query-6f3772286accab2fa38580eaf1a3dd04f44aaebeb887d2083514f20443611cab.json  query-6f3ea5bff38a0fcccb521cdf8b9d50d9eb728e77c8edb6af84ea0fdeaf7882a9.json  query-72cb6d7db89ffa763ab74c4253a3bd5608c516dada67599b501b6716bbe1e127.json  query-7a44d02c1aafe59524a418b8aa075e2a4d3937e901445da0e1611cb379f8d2c2.json  query-7abc98d170cf843951e9f91c9d9a1c087204a847d2bf5199d1b2c8d4d7f74fa9.json  query-85dafc96190d70f2d8b1fdd44b303c5bc503ddb1addee97d533bb64731303d98.json  query-8785b9c90b86d4f071284a0f7a38cf88f7b8e92b351335fc2fdbd5250d7baa6a.json  query-930e0c3589b8cd5fb4daea7940b293d3ac8a0669514f1036a6b09f242d414881.json  query-956566d60894464c4363ac2a6dc5968110d848da1cf08a2698bd7736281517c6.json  query-9695a6628605f412cd3506d707e900f7cc81f3f2f052f8e29ea977f29db61f6a.json  query-96a6b0e075548b3ba9cfc503081f49699eb500565790a759829775eaec3798b9.json  query-98a8fed6cfafd7d06e20bbadb6523d2c0f43cbee58bdb3e25f17776d0a1bf812.json  query-9909675b42571a699dbc3ea58ec9a3262dfe7ad51172272de25d682d5dd5e491.json  query-9b8602487ff63aa9c5122a01dcd88158d8ebc148deec82e76890d3acb14d2043.json  query-9bd9aac51c6c5df86d4687c0dadf671320b4f54d52df26881d1c29f66f96c446.json  query-a50bc93ed858b24778bb04abf16c51039d1f9634506f06095bf297f13ffdd766.json  query-a717d8a018c4e5f2e0e0aa81b1c0a49b0eccf2e9dffac3b299791e337bade786.json  query-abaad6f3741eab3fcd5332b0f61a3d990064211d6b9f39805c9d50db209fd4f9.json  query-af61ff75274ac8552bbd2346f0b794e030e61f2fd6906ca129e042d2440daa60.json  query-b0c7c5de7c213e18afae2f30d91fdf7cd9f60f454f41ddbcac057a132403c09e.json  query-b17953cd9e39336ed6fa67333165506c1e2d2952a6ca2b14a0229ee16d421ced.json  query-ba62d18a8d956102243b359b37008eb69af732db2f251750835d9a8263158865.json  query-cb84d52146d500ef3d679d52acb4c00a9bd5a5ab4d6d8c4edc4cd76ed9edf9f1.json  (+14 more)
api/: Cargo.toml  enchanted-natures.openapi.spec.yaml
api/config/: base.yaml
api/migrations/: 20230707040737_inital-create.up.sql  20230901042028_Seed_Data.down.sql  20231113050924_add_cloudflare.down.sql
api/sql/: get_all_categories.sql  get_photos.sql
api/sql/categories/: insert.sql
api/src/: auth.rs  configuration.rs  database.rs  domain.rs  lib.rs  main.rs  repository.rs  sessions.rs
api/src/models/: mod.rs  view_models.rs
api/src/routes/: categories.rs  health.rs  mod.rs  photos.rs
api/src/routes/categories/: delete.rs  get.rs  get_category.rs  mod.rs  patch.rs  post.rs  put.rs  put_category.rs
api/src/routes/photos/: delete.rs  get.rs  mod.rs  photo_routes.rs  post.rs  put.rs  put_photo.rs
benchmarks/: create_photo.js  get_all_photos.js  get_photo.js  health_check.js  package-lock.json  package.json
migrations/: 20230707040737_inital-create.down.sql  20230707040737_inital-create.up.sql  20230901042028_Seed_Data.up.sql  20231113050924_add_cloudflare.up.sql  20231114020328_cloudflare_data.down.sql  20231114020328_cloudflare_data.up.sql
proto/: enchanted_natures.proto
sql/: create_photo.sql  get_all_categories.sql  get_photos.sql  insert_photo.sql  insert_photo_category.sql
sql/categories/: get.sql  get_all.sql  insert.sql
sql/photo_categories/: get.sql
sql/photos/: delete.sql  get.sql  get_all.sql  insert.sql
src/: api_doc.rs  app.rs  auth.rs  configuration.rs  database.rs  db.rs  domain.rs  lib.rs  main.rs  models.rs  router.rs  routes.rs  session.rs  sessions.rs  view_models.rs
src/configuration/: database_configuration.rs
src/domain/: mod.rs  photo_service.rs
src/middleware/: auth.rs  mod.rs
src/models/: auth.rs  mod.rs  view_models.rs
src/requests/: mod.rs  photos.rs
src/routes/: auth.rs  categories.rs  enchanted_natures.rs  health.rs  mod.rs  photos.rs  upload.rs
src/routes/categories/: delete.rs  get.rs  mod.rs  patch.rs  post.rs  put.rs
src/routes/photos/: get.rs  mod.rs  post.rs
src/sessions/: mod.rs
tests/: helpers.rs  main.rs
tests/common/: mod.rs
tests/http/: Categories.http  Migration.http  Migration2.http  Migration3.http  Migration4.http  Photos.http  all_categories.json  cate-1.json  mig.http  photos-1.json  photos-2.json  photos.json  updated.json  workspace.json
