[package]
name = "api"
authors = ["H. Casten <huntercasten@icloud.com>"]
version = "0.2.0"
edition = "2021"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's' # or 'z' to optimize "aggressively" for size
lto = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hyper = { version = "1", features = [ "http1", "server"] }
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "tracing"] }
async-session = "3"
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = [
    "add-extension",
    "trace",
    "cors",
    "fs",
] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json"] }
redis = { version = "0.26", features = ["tokio-comp"] }
config = { version = "0.14", default-features = false, features = ["yaml"] }
axum-extra = { version = "0.9", features = [ "typed-header"] }

[dependencies.axum]
version = "0.7"
features = ["json", "multipart", "tracing"]

[dependencies.sqlx]
version = "0.8"
features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "uuid", "tls-rustls"]
