[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
hyper = { version = "0.14.27", features = ["full"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = { version = "1.0.103" }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.72"
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4.3", features = ["add-extension", "trace"] }
utoipa = { version = "3.4.3", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "3.1.4", features = ["axum"] }
async-trait = "0.1.72"
mockall = "0.11"
jsonwebtoken = "8"
tracing-bunyan-formatter = "0.3.1"
chrono = { version = "0.4.26", features = ["serde"] }

[dependencies.axum]
version = "0.6.19"
features = ["headers", "json"]

[dependencies.sqlx]
version = "0.7.1"
features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "uuid"]

