[package]
name = "api"
authors = ["H. Casten <huntercasten@icloud.com>"]
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
async-trait = "0.1.73"
aws-config = "0.56.1"
aws-sdk-s3 = "0.29.0"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3"
hyper = { version = "0.14.27", features = [ "http1", "server"] }
serde_json = { version = "1.0.108" }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["rt", "macros", "tracing"] }
async-session = "3.0.0"
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4.3", features = [
    "add-extension",
    "trace",
    "cors",
    "fs",
] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa-swagger-ui = { version = "4", features = ["axum"] }
oauth2 = "4.4"
reqwest = { version = "0.11.20", features = ["json"] }
redis = { version = "0.25.3", features = ["tokio-comp"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }

[dependencies.axum]
version = "0.6.20"
features = ["headers", "json", "multipart", "tracing"]

[dependencies.sqlx]
version = "0.7.3"
features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "uuid"]
